[FIX] Increase #tikihelp z-index (thanks luci).
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/3.0@18478 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/transitions/2.0to3.0.css
+++ b/styles/transitions/2.0to3.0.css
@@ -191,7 +191,7 @@ div#tikihelp {
 	margin:0;
 	border: none;
 	background-color: transparent;
-	z-index: 2;
+	z-index: 20;
 }
 
 * html div#tikihelp {position: absolute}
